# go_server/cmd/server/main.go
@@ -8,7 +8,7 @@ import (
 
 	"comics/api/route"
 	"comics/bootstrap"
-	_ "comics/docs" // docs is generated by Swag CLI, you have to import it.
+	_ "comics/docs"
 	repo "comics/repository"
 
 	"github.com/gin-gonic/gin"
@@ -40,10 +40,13 @@ type Env struct {
 //	@license.name	Apache 2.0
 //	@license.url	http://www.apache.org/licenses/LICENSE-2.0.html
 
+//	@securityDefinitions.apikey	Bearer JWT
+//	@in							header
+//	@name						Authorization
+
 // @host		localhost:8081
 // @BasePath	/
 func main() {
-
 	// app is the instance of the entire application, managing key resources throughout its lifecycle
 	app := bootstrap.App()
 
